# Praktikantenamt-AI-Assistant

./: .gitignore  README.md
ai-agents/categorization/: .env.example  README.md  benchmark_config.yaml  pyproject.toml  requirements.txt  run_model_benchmark.py
ai-agents/contract-validator/: pyproject.toml  requirements.txt
ai-agents/contract-validator/contract_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-agents/contract-validator/contract_validator/: __init__.py  cli.py
ai-agents/contract-validator/contract_validator/config/: __init__.py  manager.py  settings.yaml
ai-agents/contract-validator/contract_validator/core/: __init__.py  comparator.py  executor.py  ocr_simulator.py  scan_renderer.py  validator.py  working_days.py
ai-agents/contract-validator/contract_validator/data/: __init__.py  generator.py  loader.py  schemas.py
ai-agents/contract-validator/contract_validator/output/: __init__.py  exporter.py  formatter.py
ai-agents/contract-validator/prompts/: system_prompt.txt  v1_extraction_baseline.txt
ai-agents/contract-validator/test_data/: company_lists.yaml  dummy_contracts.json  dummy_contracts_preview.json  generate_pdfs.py
ai-agents/email-workflow-validator/: .env.template  .gitignore  GMAIL_SETUP.md  QUICKSTART.md  README.md  SECRETS.md  SETUP.md  WORKFLOW.md  pyproject.toml  requirements.txt  test_folders.py
ai-agents/email-workflow-validator/workflow_validator/: __init__.py  cli.py
ai-agents/email-workflow-validator/workflow_validator/config/: __init__.py  manager.py  settings.yaml
ai-agents/email-workflow-validator/workflow_validator/core/: __init__.py  sender.py  test_data_corrections.py  uuid_tracker.py  validator.py
ai-agents/email-workflow-validator/workflow_validator/data/: __init__.py  attachment_generator.py  loader.py  schemas.py
ai-agents/email-workflow-validator/workflow_validator/email/: __init__.py  imap_client.py  smtp_client.py
ai-agents/email-workflow-validator/workflow_validator/output/: __init__.py  exporter.py  formatter.py
ai-agents/response-generator/: pyproject.toml  requirements.txt
ai-agents/response-generator/prompts/: personalization_v1.txt  system_prompt.txt
ai-agents/response-generator/response_generator/: __init__.py  cli.py
ai-agents/response-generator/response_generator/config/: __init__.py  manager.py  settings.yaml
ai-agents/response-generator/response_generator/core/: __init__.py  comparator.py  evaluator.py  generator.py  personalizer.py
ai-agents/response-generator/response_generator/data/: __init__.py  loader.py  schemas.py
ai-agents/response-generator/response_generator/output/: __init__.py  exporter.py  formatter.py
ai-agents/response-generator/templates/contract_submission/: formal.txt  informal.txt
ai-agents/response-generator/templates/international_office_question/: formal.txt  informal.txt
ai-agents/response-generator/templates/internship_postponement/: formal.txt  informal.txt
ai-agents/response-generator/templates/uncategorized/: formal.txt  informal.txt
ai-agents/response-generator/test_data/: dummy_emails_with_responses.json
docs/: PHASE2_IMPLEMENTATION.md
mcp-tools/company-lookup/: .dockerignore  Dockerfile  README.md  claude_desktop_config.json  create_sample_data.py  docker-compose.yml  pyproject.toml  requirements.txt  run_quantification.py  setup_and_test.py
mcp-tools/company-lookup/company_lookup/: __init__.py  api.py  cli.py  mcp_server.py
mcp-tools/company-lookup/company_lookup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-tools/company-lookup/company_lookup/config/: __init__.py  manager.py  settings.yaml
mcp-tools/company-lookup/company_lookup/core/: __init__.py  excel_reader.py  fuzzy_matcher.py  lookup_engine.py
mcp-tools/company-lookup/company_lookup/data/: __init__.py  schemas.py
mcp-tools/company-lookup/company_lookup/i18n/: __init__.py  translations.py  translator.py
mcp-tools/company-lookup/company_lookup/output/: __init__.py  exporter.py  formatter.py
mcp-tools/company-lookup/data/: companies.xlsx
mcp-tools/company-lookup/tests/: __init__.py  test_fuzzy_matcher.py  test_lookup_engine.py  test_quantification.py
mcp-tools/company-lookup/tests/mcp_evaluation/: __init__.py  evaluate_mcp.py  test_prompts.json
mcp-tools/workday-calculator/: .dockerignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt
mcp-tools/workday-calculator/tests/: __init__.py  test_calculator.py
mcp-tools/workday-calculator/tests/mcp_evaluation/: __init__.py  evaluate_mcp.py  test_prompts.json
mcp-tools/workday-calculator/tests/mcp_evaluation/results/: eval_Anthropic-claude-4.5-haiku_20260129_212656.json  eval_Anthropic-claude-haiku-4-5-20251001_20260129_213019.json  eval_Anthropic-claude-haiku-4-5-20251001_20260129_213419.json  eval_Ollama-Llama3.2-3B_20260129_211712.json  eval_Ollama-Llama3.2-3B_20260129_212656.json  eval_Ollama-Qwen2.5-7B_20260129_211712.json  eval_Ollama-Qwen2.5-7B_20260129_212656.json
mcp-tools/workday-calculator/workday_calculator/: __init__.py  api.py  cli.py  mcp_server.py
mcp-tools/workday-calculator/workday_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-tools/workday-calculator/workday_calculator/config/: __init__.py  manager.py  settings.yaml
mcp-tools/workday-calculator/workday_calculator/core/: __init__.py  calculator.py  holiday_provider.py  location_resolver.py
mcp-tools/workday-calculator/workday_calculator/data/: __init__.py  bundesland_data.py  schemas.py
mcp-tools/workday-calculator/workday_calculator/output/: __init__.py  exporter.py  formatter.py
rag/content-scraper/: .env.example  README.md  WHAT_IS_RAG.md  config.py  docker-compose.yml  embeddings.py  (+6 more)
(+27 files in other folders)
