[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-validator"
version = "0.1.0"
description = "n8n workflow validation for email categorization"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
workflow-validator = "workflow_validator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_validator*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
